--- a/css/style.css
+++ b/css/style.css
@@ -355,6 +355,7 @@ footer .inner {
   font-weight: 600;
   font-size: 24px;
   text-align: center;
+  height:54px;
   display: block;
   background-image: none;
   text-decoration: none !important;
@@ -364,6 +365,7 @@ nav a {
   display: block;
   padding: 5px;
   text-align: center;
+  font-size: 40px;
   background-image: none;
   text-decoration: none !important;
   border-radius: 4px;
@@ -378,6 +380,7 @@ nav a.current {
 }
 .subtitle {
   margin: 30px 0;
+  text-align:center;
   color: rgba({{ site.text-color }},.5);
 }
 .subtitle a {
