--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,10 @@
 <meta name="description" content="{{ page.summary }} {{ site.description.meta }}">
 <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="{{ site.baseurl }}/feed.xml">
 
+<!-- include Font Awesome -->
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<!-- include Font Awesome -->
+
 <!-- icons -->
 <link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
 <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon-96x96.png" sizes="96x96">
