--- a/_includes/subtitle.html
+++ b/_includes/subtitle.html
@@ -10,7 +10,7 @@
     {{ site.var_on_the_web }}:&nbsp;
     <br/>
     {% if site.twitter %}
-        <a class="fa fa-twitter" href="{{ site.twitter }}">
+        <a href="{{ site.twitter }}" >
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
