--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,6 @@
 <nav>
   <a href="{{ site.baseurl }}/about/">About</a>
-  <a href="{{ site.baseurl }}/contact/">Contact</a>
   <a href="{{ site.baseurl }}/archive/">Archive</a>
+  <a href="{{ site.baseurl }}/category/">Category</a>
+  <a href="{{ site.baseurl }}/tags/">Tags</a>
 </nav>
