add tag cloud & add category

--- a/_includes/subtitle.html
+++ b/_includes/subtitle.html
@@ -10,7 +10,7 @@
     {{ site.var_on_the_web }}:&nbsp;
     <br/>
     {% if site.twitter %}
-        <a href="{{ site.twitter }}" >
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.twitter }}" >
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -18,16 +18,31 @@
         </a>
     {% endif %}
     {% if site.youtube %}
-        <a class="fa fa-youtube" href="{{ site.youtube }}"></a>
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.youtube }}" >
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
     {% endif %}
     {% if site.instagram %}
-        <a class="fa fa-instagram" href="{{ site.instagram }}"></a>
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.instagram }}" >
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
     {% endif %}
     {% if site.tumblr %}
-        <a class="fa fa-tumblr" href="{{ site.tumblr }}"></a>
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.tumblr }}" >
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-tumblr fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
     {% endif %}
     {% if site.facebook %}
-        <a href="{{ site.facebook }}">
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.facebook }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-facebook-official fa-stack-1x fa-inverse"></i>
@@ -35,7 +50,7 @@
         </a>
     {% endif %}
     {% if site.google-plus %}
-        <a href="{{ site.google-plus }}">
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.google-plus }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-google-plus fa-stack-1x fa-inverse"></i>
@@ -43,19 +58,39 @@
         </a>
     {% endif %}
     {% if site.reddit %}
-        <a class="fa fa-reddit" href="{{ site.reddit }}"></a>
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.reddit }}">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-reddit fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
     {% endif %}
     {% if site.soundcloud %}
-        <a class="fa fa-soundcloud" href="{{ site.soundcloud }}"></a>
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.soundcloud }}">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-soundcloud fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
     {% endif %}
     {% if site.medium %}
-        <a class="fa fa-medium" href="{{ site.medium }}"></a>
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.medium }}">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
     {% endif %}
     {% if site.linkedin %}
-        <a class="fa fa-linkedin" href="{{ site.linkedin }}"></a>
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.linkedin }}">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
     {% endif %}
     {% if site.github %}
-        <a href="{{ site.github }}">
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.github }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -63,28 +98,63 @@
         </a>
     {% endif %}
     {% if site.behance %}
-        <a class="fa fa-behance" href="{{ site.behance }}"></a>
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.behance }}">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-behance fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
     {% endif %}
     {% if site.codepen %}
-        <a class="fa fa-codepen" href="{{ site.codepen }}"></a>
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.codepen }}">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-codepen fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
     {% endif %}
     {% if site.dribbble %}
-        <a class="fa fa-dribbble" href="{{ site.dribbble }}"></a>
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.dribbble }}">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-dribbble fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
     {% endif %}
     {% if site.trello %}
-        <a class="fa fa-trello" href="{{ site.trello }}"></a>
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.trello }}">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-trello fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
     {% endif %}
     {% if site.stack-overflow %}
-        <a class="fa fa-stack-overflow" href="{{ site.stack-overflow }}"></a>
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.stack-overflow }}">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-stack-overflow fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
     {% endif %}
     {% if site.bitcoin %}
-        <a class="fa fa-bitcoin" href="{{ site.bitcoin }}"></a>
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.bitcoin }}">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-bitcoin fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
     {% endif %}
     {% if site.paypal %}
-        <a class="fa fa-paypal" href="{{ site.paypal }}"></a>
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.paypal }}">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-paypal fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
     {% endif %}
     {% if site.weibo %}
-        <a href="{{ site.weibo }}">
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.weibo }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
@@ -92,7 +162,7 @@
         </a>
     {% endif %}
     {% if site.zhihu %}
-        <a href="{{ site.zhihu }}">
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.zhihu }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x " ></i>
                 <i class="fa fa-stack-1x fa-inverse">知</i>
