--- a/css/style.css
+++ b/css/style.css
@@ -212,8 +212,8 @@ small a {
 }
 hr {
   border:none;
-  background-color: rgba({{ site.theme-color }}, .2);
-  margin: 30px auto;
+  background-color: rgba({{ site.theme-color }}, .1);
+  margin: 20px auto;
   width: 80%;
   height: 2px;
 }
@@ -488,4 +488,12 @@ nav a.current {
     margin-top: 120px;
     margin-bottom: 0;
   }
+}
+
+/* Additional */
+div.tags{
+    margin-top:15px;
+}
+div.category{
+    margin-top:15px;
 }
