--- a/_includes/subtitle.html
+++ b/_includes/subtitle.html
@@ -57,6 +57,14 @@
             </span>
         </a>
     {% endif %}
+    {% if site.flickr %}
+        <a style="color:rgba(0,0,0,.7)" href="{{ site.flickr }}">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-flickr fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+    {% endif %}
     {% if site.reddit %}
         <a style="color:rgba(0,0,0,.7)" href="{{ site.reddit }}">
             <span class="fa-stack fa-lg">
