--- a/css/style.css
+++ b/css/style.css
@@ -120,9 +120,10 @@ h3, h4, h5, h6 {
 .meta {
   color: rgba({{ site.text-color }}, 0.5);
   display: block;
+  margin-top:15px;
   margin-bottom: 10px;
   font-weight: 400;
-  font-size: 1.6em;
+  font-size: 1em;
 }
 .fluid-width-video-wrapper {
   margin: 30px auto;
