--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
 <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="{{ site.baseurl }}/feed.xml">
 
 <!-- include Font Awesome -->
-<link href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="{{ site.baseurl }}/font_owesome/css/font-owesome.min.css" rel="stylesheet">
 <!-- include Font Awesome -->
 
 <!-- icons -->
@@ -47,7 +47,7 @@
 {% endif %}">
 <!-- /og tags -->
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="{{ site.baseurl }}/js/jquery-2.1.4.min.js"></script>
 <script src="{{ site.baseurl }}/js/modernizr.js"></script>
 <script src="{{ site.baseurl }}/js/fitvids.js"></script>
 <link href='//fonts.googleapis.com/css?family=Source+Code+Pro:400,700|Source+Sans+Pro:600,900|Crimson+Text:700italic,600,600italic,400,700,400italic' rel='stylesheet' type='text/css'>
