--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,14 @@ p code {
   border: 1px solid rgba({{ site.text-color }},.1);
   padding: 0 3px;
 }
+li code {
+  font-size: 1em;
+  display: inline-block;
+  border-radius: 2px;
+  background-color: rgba({{ site.text-color }},.05);
+  border: 1px solid rgba({{ site.text-color }},.1);
+  padding: 0 3px;
+}
 pre {
   display: block;
   background-color: rgba(0,0,0,.8);
@@ -425,7 +433,7 @@ nav a.current {
   }
   li {
     padding-left: 10px;
-    margin: 30px 0;
+    margin: 10px 0;
   }
   table {
     margin: 40px auto;
@@ -503,4 +511,11 @@ div.category{
 div.times{
     margin-top:15px;
     color: rgba({{ site.text-color }}, 0.5);
+}
+
+p a{
+    color: rgba({{ site.text-color }}, 0.5);
+}
+p a:hover{
+    color: rgba({{ site.text-color }}, 1);
 }
