--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,7 +54,7 @@
 <link rel="stylesheet" href="{{ site.baseurl }}/css/reset.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/css/pygments.css">
 {% if site.display-social-icons %}
-<link rel="stylesheet" href="{{ site.baseurl }}/css/font-awesome.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/font_awesome/css/font-awesome.min.css">
 {% endif %}
 <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
 <!--[if gte IE 9]>
