--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ layout: default
             {% endfor %}
         </div>
         <div class="times">
-            <span class="fa fa-calendar-o">{{ page.date | date: site.date_format }} • {{ read-time }}</span>
+            <span class="fa fa-calendar">{{ page.date | date: site.date_format }} • {{ read-time }}</span>
         </div>
 
         <hr>
