--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
         </div>
         {% endif %}
         {% if site.enabletoTop %}
-        <div id="back-top" >
+        <div id="back-top" style="display:none">
           <a href="#top" title="回到顶部">
               <span class="fa-stack fa-lg">
                   <i class="fa-square fa-stack-2x"></i>
