--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,5 +35,28 @@
             </script>
         </div>
         {% include footer.html %}
+        {% if site.googleAnaly.config %}
+            <script>
+              (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+              })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+              ga('create', '{{ site.googleAnaly.id }}', 'auto');
+              ga('send', 'pageview');
+
+            </script>
+        {% endif %}
+        {% if site.baiduAnaly.config %}
+            <script>
+            var _hmt = _hmt || [];
+            (function() {
+              var hm = document.createElement("script");
+              hm.src = "//hm.baidu.com/hm.js?93c048bb9273a232e5e814272f1409b7";
+              var s = document.getElementsByTagName("script")[0]; 
+              s.parentNode.insertBefore(hm, s);
+            })();
+            </script>
+        {% endif %}
     </body>
 </html>
