--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
         {% if site.enabletoTop %}
         <div id="back-top" style="display:none">
           <a href="#top" title="回到顶部">
-              <span class="fa-stack fa-lg">
-                  <i class="fa-square fa-stack-2x"></i>
-                  <i class="fa-stack-1x fa-arrow-up fa-inverse"></i>
+              <span class="fa fa-stack fa-lg">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-stack-1x fa-arrow-up fa-inverse"></i>
               </span>
           </a>
         </div>
