--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
 <nav>
-  <a href="{{ site.baseurl }}/about/">About</a>
-  <a href="{{ site.baseurl }}/archive/">Archive</a>
-  <a href="{{ site.baseurl }}/category/">Category</a>
-  <a href="{{ site.baseurl }}/tags/">Tags</a>
+  <a href="{{ site.baseurl }}/about/">ABOUT</a>
+  <a href="{{ site.baseurl }}/archive/">ARCHIVE</a>
+  <a href="{{ site.baseurl }}/category/">CATEGORY</a>
+  <a href="{{ site.baseurl }}/tags/">TAGS</a>
 </nav>
