--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,8 @@
 /* Content */
 
 body {
-  font-family: "Crimson Text", "Microsoft YaHei", Georgia, Cambria, "Times New Roman", Times, serif;
-  font-size: 22px;
+  font-family: "Helvetica Neue", Arial, "Hiragino Sans GB", "STHeiti", "Microsoft YaHei", "WenQuanYi Micro Hei", SimSun, sans-serif;
+  font-size: 16px;
   -webkit-font-smoothing: antialiased;
   font-weight: 400;
   color: rgba({{ site.text-color }}, .76);
@@ -32,7 +32,7 @@ html, body {
   height: 100%;
 }
 p, form {
-  line-height: 1.4;
+  line-height: 28px;
   margin: 30px auto;
   word-wrap: break-word;
 }
@@ -105,17 +105,19 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: normal;
 }
 h1 {
-  font-size: 2.2em;
+  font-size: 2.5em;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 h2 {
-  font-size: 1.5em;
-  margin-top: 40px;
-  margin-bottom: 30px;
+  font-size: 1.8em;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 h3, h4, h5, h6 {
-  font-size: 1.05em;
-  margin-top: 40px;
-  margin-bottom: 30px;
+  font-size: 1.2em;
+  margin-top: 12px;
+  margin-bottom: 12px;
 }
 .meta {
   color: rgba({{ site.text-color }}, 0.5);
@@ -274,10 +276,10 @@ article {
 }
 article::after,
 header::after {
-  margin: 50px 0;
-  content: "•";
+  margin: 10px 0;
+  content: open-quote;
   line-height: 0;
-  font-size: 60px;
+  font-size: 32px;
   display: block;
   text-align: center;
   color: rgba({{ site.theme-color }}, 0.4);
@@ -375,7 +377,7 @@ nav a {
   display: block;
   padding: 5px;
   text-align: center;
-  font-size: 40px;
+  font-size: 26px;
   background-image: none;
   text-decoration: none !important;
   border-radius: 4px;
@@ -389,6 +391,7 @@ nav a.current {
   color: rgba({{ site.text-color }}, .76)
 }
 .subtitle {
+  font-size:22px;
   margin: 30px 0;
   text-align:center;
   color: rgba({{ site.text-color }},.5);
@@ -406,10 +409,7 @@ nav a.current {
 
 @media all and (min-width: 370px) {
   .website-title {
-    font-size: 32px;
-  }
-  body {
-    font-size: 24px;
+    font-size: 22px;
   }
 }
 @media all and (min-width: 500px) {
@@ -426,7 +426,7 @@ nav a.current {
   pre,
   p,
   form {
-    margin: 40px 0;
+    margin: 0px 0;
   }
   ol, ul {
     padding-left: 50px;
@@ -441,21 +441,7 @@ nav a.current {
   }
   article::after,
   header::after {
-    margin: 70px;
-  }
-  h1 {
-    font-size: 2.6em;
-    margin-bottom: -10px;
-  }
-  h2 {
-    font-size: 1.8em;
-    margin-top: 60px;
-    margin-bottom: -10px;
-  }
-  h3, h4, h5, h6 {
-    font-size: 1.2em;
-    margin-top: 60px;
-    margin-bottom: -10px;
+    margin: 20px;
   }
   .img-only {
     margin: 0 -30px;
@@ -477,7 +463,7 @@ nav a.current {
   }
   nav {
     position: absolute;
-    top: 20px;
+    top: 36px;
     right: 0;
     margin: 0;
   }
@@ -490,9 +476,6 @@ nav a.current {
   }
 }
 @media all and (min-width: 760px) {
-  h1 {
-    font-size: 2.9em;
-  }
   article:last-of-type::after {
     content: "";
     margin-top: 120px;
@@ -521,6 +504,7 @@ p a:hover{
     color: rgba({{ site.text-color }}, 1);
 }
 #back-top {
+  font-size:24px;
   position: fixed;
   bottom: 30px;
   margin-left: 80%;
@@ -528,4 +512,9 @@ p a:hover{
 }
 #back-top a:hover{
   color:rgba({{ site.text-color }},.76);
+}
+
+.blogtitle{
+  font-family: "Source Sans Pro", Verdana, sans-serif;
+  font-size:16px;
 }
