Change Pic, Change Fonts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <body>
         {% if page.cover-image %}
         <div class="cover-image-container">
-            <img alt="Cover image" src="{{ site.baseurl }}/img/covers/{{ page.cover-image }}" style="width:2000px">
+            <img alt="Cover image" src="{{ site.baseurl }}/img/covers/{{ page.cover-image }}" style="width:100%">
         </div>
         {% endif %}
         {% if site.enabletoTop %}
