--- a/_includes/head.html
+++ b/_includes/head.html
@@ -68,7 +68,7 @@ $(document).ready(function () {
   });
 });
 </script>
-<link href='//fonts.useso.com/css?family=Source+Code+Pro:400,700|Source+Sans+Pro:600,900|Crimson+Text:700italic,600,600italic,400,700,400italic' rel='stylesheet' type='text/css'>
+<link href='//fonts.useso.com/css?family=Source+Code+Pro:400,700|Source+Sans+Pro:600,900|Open+Sans:400,600' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{{ site.baseurl }}/css/reset.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/css/pygments.css">
 {% if site.display-social-icons %}
