change wrap min width

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width">
 <title>
 {% if page.title %}
-{{ page.title }} • {{ site.name }}
+{{ page.title }} | {{ site.name }}
 {% else %}
 {{ site.name }}
 {% endif %}
