--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,4 +3,5 @@
   <a href="{{ site.baseurl }}/archive/">ARCHIVE</a>
   <a href="{{ site.baseurl }}/category/">CATEGORY</a>
   <a href="{{ site.baseurl }}/tags/">TAGS</a>
+  <a href="{{ site.baseurl }}/reading/">BOOK</a>
 </nav>
