--- a/css/style.css
+++ b/css/style.css
@@ -377,7 +377,7 @@ nav a {
   display: block;
   padding: 5px;
   text-align: center;
-  font-size: 26px;
+  font-size: 22px;
   background-image: none;
   text-decoration: none !important;
   border-radius: 4px;
@@ -385,7 +385,7 @@ nav a {
   position: relative;
 }
 nav a:hover {
-  color: rgba({{ site.text-color }},.76);
+  color: rgba({{ site.text-color }}, 1);
 }
 nav a.current {
   color: rgba({{ site.text-color }}, .76)
@@ -459,7 +459,7 @@ nav a.current {
   }
   nav {
     position: absolute;
-    top: 36px;
+    top: 37px;
     right: 0;
     margin: 0;
   }
