--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,8 @@ hr {
   z-index: -9999;
   opacity: .5;
   width: 100%;
+  background-color:grey;
+  background-size:cover;
 }
 .cover-image-container::after {
   content: "";
