--- a/css/style.css
+++ b/css/style.css
@@ -375,6 +375,22 @@ footer .inner {
   background-image: none;
   text-decoration: none !important;
 }
+p .pic-title{
+    margin: 0 auto;
+    text-align: center;
+}
+p .pic-title span{
+    min-width: 20%;
+    min-height: 22px;
+    display: inline-block;
+    padding: 10px;
+    margin: 0 auto;
+    border-bottom: 1px solid #d9d9d9;
+    font-size: 18px;
+    color: #999;
+    font-style: italic;
+    line-height: 1.7;
+}
 nav a {
   display: block;
   padding: 5px;
