--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,9 @@ a {
   /*background-size: 1px 1px;*/
   /*background-position: 0 87%;*/
 }
+a:hover{
+    color:rgba({{ site.theme-color }}, 1);
+}
 .no-cssgradients a {
   text-decoration: underline;
 }
@@ -262,7 +265,7 @@ hr {
   height: 141px;
 }
 header {
-  padding-top: 20px;
+  padding-top: 10px;
   position: relative;
   color: rgba({{ site.text-color }},.5);
 }
@@ -271,6 +274,7 @@ header img {
   display: inline-block;
 }
 nav {
+  font-family: "Source Sans Pro", Verdana, sans-serif;
   margin: 20px 0;
 }
 article {
@@ -478,8 +482,8 @@ nav a.current {
   nav {
     font-family: "Source Sans Pro", Verdana, sans-serif;
     position: absolute;
-    top: 37px;
-    right: 0;
+    top: 25px;
+    right: 5px;
     margin: 0;
     font-size: 24px;
     font-weight: 600;
