Add module Reading

--- a/_includes/subtitle.html
+++ b/_includes/subtitle.html
@@ -12,7 +12,7 @@
     </p>
     <p>
     {% if site.twitter %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.twitter }}" >
+        <a href="{{ site.twitter }}" >
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -20,7 +20,7 @@
         </a>
     {% endif %}
     {% if site.youtube %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.youtube }}" >
+        <a href="{{ site.youtube }}" >
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
@@ -28,7 +28,7 @@
         </a>
     {% endif %}
     {% if site.instagram %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.instagram }}" >
+        <a href="{{ site.instagram }}" >
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
@@ -36,7 +36,7 @@
         </a>
     {% endif %}
     {% if site.tumblr %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.tumblr }}" >
+        <a href="{{ site.tumblr }}" >
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-tumblr fa-stack-1x fa-inverse"></i>
@@ -44,7 +44,7 @@
         </a>
     {% endif %}
     {% if site.facebook %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.facebook }}">
+        <a href="{{ site.facebook }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-facebook-official fa-stack-1x fa-inverse"></i>
@@ -52,7 +52,7 @@
         </a>
     {% endif %}
     {% if site.google-plus %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.google-plus }}">
+        <a href="{{ site.google-plus }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-google-plus fa-stack-1x fa-inverse"></i>
@@ -60,7 +60,7 @@
         </a>
     {% endif %}
     {% if site.flickr %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.flickr }}">
+        <a href="{{ site.flickr }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-flickr fa-stack-1x fa-inverse"></i>
@@ -68,7 +68,7 @@
         </a>
     {% endif %}
     {% if site.reddit %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.reddit }}">
+        <a href="{{ site.reddit }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-reddit fa-stack-1x fa-inverse"></i>
@@ -76,7 +76,7 @@
         </a>
     {% endif %}
     {% if site.soundcloud %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.soundcloud }}">
+        <a href="{{ site.soundcloud }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-soundcloud fa-stack-1x fa-inverse"></i>
@@ -84,7 +84,7 @@
         </a>
     {% endif %}
     {% if site.medium %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.medium }}">
+        <a href="{{ site.medium }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
@@ -92,7 +92,7 @@
         </a>
     {% endif %}
     {% if site.linkedin %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.linkedin }}">
+        <a href="{{ site.linkedin }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -100,7 +100,7 @@
         </a>
     {% endif %}
     {% if site.github %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.github }}">
+        <a href="{{ site.github }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -108,7 +108,7 @@
         </a>
     {% endif %}
     {% if site.behance %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.behance }}">
+        <a href="{{ site.behance }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-behance fa-stack-1x fa-inverse"></i>
@@ -116,7 +116,7 @@
         </a>
     {% endif %}
     {% if site.codepen %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.codepen }}">
+        <a href="{{ site.codepen }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-codepen fa-stack-1x fa-inverse"></i>
@@ -124,7 +124,7 @@
         </a>
     {% endif %}
     {% if site.dribbble %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.dribbble }}">
+        <a href="{{ site.dribbble }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-dribbble fa-stack-1x fa-inverse"></i>
@@ -132,7 +132,7 @@
         </a>
     {% endif %}
     {% if site.trello %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.trello }}">
+        <a href="{{ site.trello }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-trello fa-stack-1x fa-inverse"></i>
@@ -140,7 +140,7 @@
         </a>
     {% endif %}
     {% if site.stack-overflow %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.stack-overflow }}">
+        <a href="{{ site.stack-overflow }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-stack-overflow fa-stack-1x fa-inverse"></i>
@@ -148,7 +148,7 @@
         </a>
     {% endif %}
     {% if site.bitcoin %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.bitcoin }}">
+        <a href="{{ site.bitcoin }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-bitcoin fa-stack-1x fa-inverse"></i>
@@ -156,7 +156,7 @@
         </a>
     {% endif %}
     {% if site.paypal %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.paypal }}">
+        <a href="{{ site.paypal }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-paypal fa-stack-1x fa-inverse"></i>
@@ -164,7 +164,7 @@
         </a>
     {% endif %}
     {% if site.weibo %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.weibo }}">
+        <a href="{{ site.weibo }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
@@ -172,7 +172,7 @@
         </a>
     {% endif %}
     {% if site.zhihu %}
-        <a style="color:rgba(0,0,0,.7)" href="{{ site.zhihu }}">
+        <a href="{{ site.zhihu }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x " ></i>
                 <i class="fa fa-stack-1x fa-inverse">知</i>
