--- a/_includes/head.html
+++ b/_includes/head.html
@@ -70,6 +70,8 @@ $(document).ready(function () {
 {% if site.display-social-icons %}
     <link rel="stylesheet" href="{{ site.baseurl }}/font_awesome/css/font-awesome.min.css">
 {% endif %}
+<link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
 <!--[if gte IE 9]>
   <style type="text/css">
