change navigation margin

--- a/css/style.css
+++ b/css/style.css
@@ -483,12 +483,14 @@ a.booklink{
 @media all and (min-width: {{ site.nav-breaking-point }}) {
   .website-title {
     text-align: left;
+    margin-bottom: 80px;
+    margin-left: 15px;
   }
   nav {
     font-family: "Source Sans Pro", Verdana, sans-serif;
     position: absolute;
     top: 20px;
-    right: 20px;
+    right: 15px;
     margin: 0;
     font-size: 24px;
     font-weight: 600;
@@ -498,9 +500,6 @@ a.booklink{
     color: rgba({{ site.text-color }}, .76);
     display: inline-block;
     padding: 5px 5px;
-  }
-  .website-title {
-    margin-bottom: 80px;
   }
 }
 @media all and (min-width: 760px) {
